operator/config/gatekeeper/constraint-templates/evergreen-no-alpine.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: evergreennoalpine
spec:
  crd:
    spec:
      names:
        kind: EvergreenNoAlpine
      validation:
        openAPIV3Schema:
          type: object
          properties:
            exemptImages:
              type: array
              items:
                type: string
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package evergreennoalpine

        violation[{"msg": msg}] {
          input.review.object.spec.containers[_].image
          img := input.review.object.spec.containers[_].image
          contains(img, "alpine")
          not is_exempt(img)
          msg := sprintf("Alpine images are BANNED per ADR-007: %v", [img])
        }

        violation[{"msg": msg}] {
          input.review.object.spec.initContainers[_].image
          img := input.review.object.spec.initContainers[_].image
          contains(img, "alpine")
          not is_exempt(img)
          msg := sprintf("Alpine images are BANNED per ADR-007 (init container): %v", [img])
        }

        is_exempt(img) {
          exempt := input.parameters.exemptImages[_]
          img == exempt
        }
