operator/config/gatekeeper/constraint-templates/evergreen-no-debian-slim.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: evergreennodebianslim
spec:
  crd:
    spec:
      names:
        kind: EvergreenNoDebianSlim
      validation:
        openAPIV3Schema:
          type: object
          properties:
            exemptImages:
              type: array
              items:
                type: string
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package evergreennodebianslim

        violation[{"msg": msg}] {
          input.review.object.spec.containers[_].image
          img := input.review.object.spec.containers[_].image
          contains(img, "debian")
          contains(img, "slim")
          not is_exempt(img)
          msg := sprintf("debian-slim is BANNED per ADR-007: %v", [img])
        }

        is_exempt(img) {
          exempt := input.parameters.exemptImages[_]
          img == exempt
        }
